components/31-molecules/islands/gentinfo-island/_gentinfo_island.scss
.gentinfo-block {
  @include theme('background-color', 'color-secondary', 'gentinfo-block-background');

  display: flex;
  position: relative;
  flex-wrap: wrap;
  margin-top: 3rem;
  padding: 2.5rem;
  font-size: .8rem;
  line-height: 1.75;
  text-align: center;
  box-shadow: 0 8px 12px 0 rgba(0, 125, 179, .06);

  @include tablet {
    flex-wrap: nowrap;
    margin: 0;
    text-align: left;
  }

  .gentinfo-icon {
    display: block;
    width: 7.8rem;
    margin: -6rem auto 0;

    @include tablet {
      align-self: center;
      margin: 0 2.4rem 0 0;
    }
  }

  .gentinfo-block-content {
    width: 100%;

    @include tablet {
      width: span(5 of 7);
      max-width: 15rem;
    }

    h2 {
      font-weight: 800;
    }

    ul {
      margin: 0;
      list-style: none;

      a {
        @include theme('color', 'color-primary--darken-2', 'gentinfo-block-link-color');

        margin-left: -.3rem;
        font-size: .8rem;
        font-weight: 600;
        text-decoration: none;
      }
    }
  }

  .gentinfo-chat-button {
    position: absolute;
    right: 1.5rem;
    bottom: -1rem;
  }
}

